--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
@@ -4,7 +4,7 @@
     <h2 class="ui header">อัพโหลดรายงานสินทรัพย์</h2>
 
     <div class="ui top attached header">
-      <span>อัพโหลดรายงานสินทรัพย์</span>
+      <span>ตรวจสอบสินทรัพย์</span>
     </div>
 
     <div class="ui attached segment">
@@ -72,8 +72,8 @@
           <br>         
         <div class="ui grid center aligned">
           <div class="sixteen wide column">
-           บันทึกการับ-จ่ายแสตมป์
-            <br>สำนักงานสรรพสามิตภาคที่ 5 พื้นที่ลำปาง	
+              รายงานยอดสินทรัพย์คงเหลือ	
+            <br>หน่วยเบิกจ่าย 0300600233 สำนักงานสรรพสามิตพื้นที่สมุทรสาคร	
             <br> งบประมาณปี 2560
           </div>
         </div>
