--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
@@ -4,14 +4,14 @@
 
 
     <div class="ui top attached header">
-      <span>อัพโหลดรายงานสินทรัพย์</span>
+      <span>บันทึกผลการจัดซื้อจัดจ้าง</span>
     </div>
 
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
           <div class="eight wide field ">
-            <label class="custom-label-w-25">รายงานสินทรัพย์ (GFMIS)</label>
+            <label class="custom-label-w-25">บันทึกผลการจัดซื้อจัดจ้าง</label>
             <input type="file" />
           </div>
         </div>
