--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
@@ -26,7 +26,27 @@
                  
                   <td><button class="negative ui center aligned button" style="width: 190px; ">แสดงบันทึกข้อความ</button></td>
               </tr>
-            
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
           </table>
           <br>
           <div class="ui center aligned grid">
