--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1-1/cop03-1-1-1/cop03-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1-1/cop03-1-1-1/cop03-1-1-1.component.html
@@ -25,7 +25,27 @@
                   <td style="text-align: center;">ขออนุมัติเดินทางไปราชการตรวจติดตามแนะนำโรงอุตสากรรมรถยนต์</td>	
                   <td><button class="negative ui center aligned button" style="width: 190px; ">แสดงบันทึกข้อความ</button></td>
               </tr>
-            
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
           </table>
           <br>
           <div class="ui center aligned grid">
