commit แก้ text เพิ่มเติม

--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-1/cop01-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-1/cop01-1.component.html
@@ -17,8 +17,8 @@
           <div class="four wide field ">
             <input type="text" placeholder="" value="61-00187">
           </div>
-          <div class="three wide field "> </div>
-          <div class="field">
+          <div class="two hree wide field "> </div>
+          <div class="three wide field">
             <label>วันที่จัดทำแผน :</label>
           </div>
           <div class="four ui action input">
