--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-2/cop02-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-2/cop02-1-2.component.html
@@ -36,7 +36,7 @@
             <label>ถึง:</label>
           </div>
           <div class="three wide field ">
-            <input type="text" placeholder="" value="8/30/2560cd">           
+            <input type="text" placeholder="" value="8/30/2560">           
           </div>
         </div>
 
