--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1.component.html
@@ -11,15 +11,15 @@
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="two wide field ">
-            <label>ส่วนราชการ:</label>
+          <div class="two wide field">
+            <label>ส่วนราชการ</label>
           </div>
           <div class="six wide field ">
             <input type="text" placeholder="" value="สำนักมาตรฐานและจัดเก็บภาษี 2 ส่วนมาตรฐานและพัฒนา">
           </div>
           <div class="three wide field "> </div>
           <div class="one wide field ">
-            <label>วันที่: </label>
+            <label>วันที่ </label>
           </div>
           <div class="four wide field ">
             <input type="text" placeholder="" value="26 กรกฏาคม 2560">
@@ -28,7 +28,7 @@
 
         <div class="inline fields">
           <div class="two wide field ">
-            <label>ที่:</label>
+            <label>ที่</label>
           </div>
           <div class="six wide field ">
             <input type="text" placeholder="" value="กค 0616/5005 ">
@@ -37,7 +37,7 @@
 
         <div class="inline fields">
           <div class="two wide field ">
-            <label>เรื่อง:</label>
+            <label>เรื่อง</label>
           </div>
           <div class="six wide field ">
             <input type="text" placeholder="" value="ขออนุมัติเดินทางไปราชการตรวจติดตามแนะนำโรงอุตสากรรมรถยนต์">
@@ -46,17 +46,17 @@
 
         <div class="inline fields">
           <div class="two wide field ">
-            <label>งาน:</label>
+            <label>งาน</label>
           </div>
           <div class="six wide field ">
-            <input type="text" placeholder="" value="อธิบดี (ผ่านริงอธิบดี นายสมเดช ศรีสวัสดิ์)	">
+            <input type="text" placeholder="" value="อธิบดี (ผ่านรองอธิบดี นายสมเดช ศรีสวัสดิ์)	">
           </div>
         </div>
 
         <div class="inline fields">
           <div class="two wide field ">
             <label>
-              <h3>ผู้นำตรวจ</h3>
+             ผู้นำตรวจ
             </label>
           </div>
           <div class="five wide field ">
@@ -65,7 +65,7 @@
           <div class="two wide field "> </div>
           <div class="two wide field ">
             <label>
-              <h3>ตำแหน่ง</h3>
+              ตำแหน่ง
             </label>
           </div>
           <div class="five wide field ">
@@ -76,7 +76,7 @@
         <div class="inline fields">
           <div class="two wide field ">
             <label>
-              <h3>ผู้ตรวจ</h3>
+              ผู้ตรวจ
             </label>
           </div>
           <div class="five wide field ">
@@ -85,7 +85,7 @@
           <div class="two wide field "> </div>
           <div class="two wide field ">
             <label>
-              <h3>ตำแหน่ง</h3>
+             ตำแหน่ง
             </label>
           </div>
           <div class="five wide field ">
@@ -97,7 +97,7 @@
         <div class="inline fields">
           <div class="two wide field ">
             <label>
-              <h3>เพิ่มผู้ตรวจ</h3>
+              เพิ่มผู้ตรวจ
             </label>
           </div>
         </div>
