--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1.component.html
@@ -12,16 +12,15 @@
       <div class="ui form">
         <div class="inline fields">
           <div class="two wide field">
-            <label>ส่วนราชการ</label>
+            <label style="text-align: right;">ส่วนราชการ</label>
           </div>
           <div class="six wide field ">
             <input type="text" placeholder="" value="สำนักมาตรฐานและจัดเก็บภาษี 2 ส่วนมาตรฐานและพัฒนา">
+          </div>        
+          <div class="two wide field ui center aligned" >              
+            <label class="">วันที่ </label>
           </div>
-          <div class="three wide field "> </div>
-          <div class="one wide field ">
-            <label>วันที่ </label>
-          </div>
-          <div class="four wide field ">
+          <div class="five wide field ">
             <input type="text" placeholder="" value="26 กรกฏาคม 2560">
           </div>
         </div>
@@ -59,10 +58,10 @@
              ผู้นำตรวจ
             </label>
           </div>
-          <div class="five wide field ">
+          <div class="six wide field ">
             <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field "> </div>
+          </div>      
+          
           <div class="two wide field ">
             <label>
               ตำแหน่ง
@@ -79,10 +78,10 @@
               ผู้ตรวจ
             </label>
           </div>
-          <div class="five wide field ">
+          <div class="six wide field ">
             <input type="text" placeholder="" value="">
           </div>
-          <div class="two wide field "> </div>
+         
           <div class="two wide field ">
             <label>
              ตำแหน่ง
