--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop05/cop05-1/cop05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop05/cop05-1/cop05-1.component.html
@@ -9,13 +9,13 @@
       <div class="ui form">
         <div class="inline fields">
           <div class="three wide field ">
-            <label>เลขทะเบียนสรรพสามิต</label>
+            <label>เลขทะเบียนสรรพสามิต  :</label>
           </div>
           <div class="five wide field ">
             <input type="text" placeholder="" value="">
           </div>
           <div class="two wide field ">
-            <label>วันที่ตรวจ
+            <label>วันที่ตรวจ   :
             </label>
           </div>
           <div class="five wide field ">
