--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
@@ -30,10 +30,10 @@
       </div>
 
 
-    <h2 class="ui header">ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</h2>
+    <h2 class="ui header">ตรวจสอบการนำส่งบัญชีเจ้าหนี้ อปท</h2>
 
     <div class="ui top attached header">
-      <span>ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</span>
+      <span>ตรวจสอบการนำส่งบัญชีเจ้าหนี้ อปท</span>
     </div>
 
 
