--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-7/int07-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-7/int07-7.component.html
@@ -29,10 +29,10 @@
         </div>
       </div>
 
-    <h2 class="ui header">ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</h2>
+    <h2 class="ui header">รายงานเคลื่อนไหวเงินฝากคลัง</h2>
 
     <div class="ui top attached header">
-      <span>ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</span>
+      <span>รายงานเคลื่อนไหวเงินฝากคลัง</span>
     </div>
 
 
