--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -43,33 +43,49 @@
         </div>
 
         <div class="inline fields">
-          <div class="five wide field ">
-            <label>กำหนดช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
-            </div>
-            <div class="two wide field ">
-            <input name ="" value="">
+            <div class="three wide field ">
+                <label>กำหนดเงื่อนไข</label>
+              </div>
+          <div class="three wide field ">
+            <label>จำนวนเดือนที่ชำระภาษี</label>
           </div>
-          
+          <div class="two wide field ">
+            <input name="" value="">
+          </div>
+
           <div class="one wide field ">
             <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
-            </div>
-            <div class="two wide field ">
-              <input name ="" value="">
-            </div>
-            <div class="nine wide field "></div>
+          </div>
+          <div class="two wide field ">
+            <input name="" value="">
+          </div>
+         
+          <div class="five wide field ">
+            <label>ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
+          </div>
+          <div class="two wide field ">
+            <input name="" value="">
+          </div>
+
+          <div class="one wide field ">
+            <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
+          </div>
+          <div class="two wide field ">
+            <input name="" value="">
+          </div>        
         </div>
 
         <div id="addCondition"></div>
         <div class="inline fields">
-            <i class="plus icon"></i>
+          <i class="plus icon"></i>
           <div class="five wide field ">
-              <a  (click)="addCondition();" style="cursor:  pointer;" >เพิ่มเงื่อนไข</a>
-            
-            </div>           
-       </div>
+            <a (click)="addCondition();" style="cursor:  pointer;">เพิ่มเงื่อนไข</a>
 
-          
-                <div class="ui center aligned grid">
+          </div>
+        </div>
+
+
+        <div class="ui center aligned grid">
           <div class="sixteen wide column">
             <button class="ui mini primary button" routerLink="/working-paper-1-trader">
               <i class="add icon"></i>
